Updating File: config/config.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
+  "polarityIntegrationUuid": "ee64e150-cce1-11ed-aeee-075d3490155d",
   "name": "Regex Cheat Sheet",
   "acronym": "REGEX",
   "onDemandOnly": true,
