--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "RegexCheatSheet",
-  "version": "3.0.2-beta",
+  "version": "3.0.2",
   "main": "./integration.js",
   "description": "Search popular strings like IP or email and get regex suggestions",
   "private": true,
